GNOME Bugzilla – Bug 678211
mpegtsmux: Fix compiler warnings
Last modified: 2012-06-16 17:30:46 UTC
Compiler warnings on 64 bit mingw-w64: tsmux.c: In function 'tsmux_write_stream_packet': tsmux.c:770:49: error: integer overflow in expression mpegtsmux.c: In function 'mpegtsmux_create_stream': mpegtsmux.c:529:3: error: format '%04x' expects type 'unsigned int', but argument 8 has type 'struct GstCaps *' mpegtsmux.c:529:3: error: too few arguments for format
Created attachment 216566 [details] [review] Proposed patch
Thanks, pushed: commit 29d0e20a8c335838a2c07f4f517ed6cfa04a74bd Author: Raimo Järvi <raimo.jarvi@gmail.com> Date: Sat Jun 16 15:54:49 2012 +0300 mpegtsmux: Fix compiler warnings https://bugzilla.gnome.org/show_bug.cgi?id=678211