mpegtsmux: Fix compiler warnings

https://bugzilla.gnome.org/show_bug.cgi?id=678211